[package]
name = "zeta_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "1.1"
k256 = { version = "0.12", features = ["ecdsa"] }
pbkdf2 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[lib]
name = "zeta_crypto"
path = "src/lib.rs"

[[bin]]
name = "zeta-cli"
path = "src/bin/cli.rs"